# SurfAccounting

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  PROJECT_TASKS.md  README.md  SECURITY.md  entrypoint.sh  nginx.conf  package-lock.json  public_tasks.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
backend/: app.py  config.py  seed.py
backend/accounting_periods/: __init__.py  schemas.py
backend/accounts/: __init__.py  schemas.py
docs/: API.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  (+1 more)
mcp_server/: README.md  instance.py  pyproject.toml  schemas.py  server.py
migrations/: env.py
scripts/: migrate_sqlite_to_pg.py  reset_db.py  seed_db.py
tests/: conftest.py  reproduce_500.py  reproduce_real_db.py  test_account_api.py  test_auth.py  test_bank_account_api.py  test_base_model.py  test_bill_api.py  test_bill_approval_gl.py  test_bill_line_api.py  test_bill_logic.py  test_bill_logic_taxes.py  test_cash_flow.py  test_customer_api.py  test_dashboard_api.py  test_e2e_9_4.py  test_financial_logic_9_2.py  test_invoice_api.py  test_invoice_gl_sync.py  test_invoice_line_api.py  test_invoice_logic.py  test_item_logic.py  test_journal_api.py  test_journal_enforcement.py  test_journal_line_api.py  test_journal_metadata.py  test_payment_api.py  test_payment_logic.py  test_reports.py  test_settings_api.py  test_tax_accounts_linking.py  test_tax_api.py  test_vendor_api.py  test_vendor_payment_api.py  test_vendor_payment_logic.py
(+141 files in other folders)
