[project]
name = "surfaccounting"
version = "0.1.0"
description = "Surf - Bookkeeping and invoicing app with Flask backend and Vue frontend"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastmcp>=3.1.0",
    "flask>=3.1.0",
    "flask-cors>=4.0.0",
    "flask-sqlalchemy>=3.1.0",
    "flask-migrate>=4.0.0",
    "flask-jwt-extended>=4.6.0",
    "flask-marshmallow>=1.2.0",
    "marshmallow-sqlalchemy>=1.0.0",
    "marshmallow>=3.20.0",
    "sqlalchemy>=2.0.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.2.2",
    "faiss-cpu>=1.9.0",
    "sentence-transformers>=3.0.0",
    "psycopg2-binary>=2.9.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
surf-backend = "backend.app:main"

[tool.uv.workspace]
members = [
    "mcp_server",
]
